scripts/k8s/restApi.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: airflow-restapi
  namespace: airflow-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: airflow
      component: restapi
      release: v2.6.0
  template:
    metadata:
      labels:
        tier: airflow
        component: restapi
        release: v2.6.0
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      containers:
        - name: restapi
          image: registry.akulaku.com/data/airflow:v2.6.0-python3.10
          imagePullPolicy: Always
          command: ["/bin/sh"]
          args: ["/opt/airflow/plugins/rest_api/start.sh"]
          volumeMounts:
            - name: logs-pv
              mountPath: "/opt/airflow/logs"
            - name: dags-pv
              mountPath: "/opt/airflow/dags"
            - name: plugins-pv
              mountPath: "/opt/airflow/plugins"
            - name: config
              mountPath: "/opt/airflow/airflow.cfg"
              subPath: airflow.cfg
      volumes:
        - name: config
          configMap:
            name: airflow-configmap
        - name: logs-pv
          persistentVolumeClaim:
            claimName: airflow-logs-pvc
        - name: dags-pv
          persistentVolumeClaim:
            claimName: airflow-dags-pvc
        - name: plugins-pv
          persistentVolumeClaim:
            claimName: airflow-plugins-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: airflow-restapi-svc
spec:
  type: ClusterIP
  ports:
    - name: airflow-restapi
      port: 8090
      targetPort: 8090
      protocol: TCP
  selector:
    tier: airflow
    component: restapi
    release: v2.6.0
